--- a/src/CSS/Accomplishment.css
+++ b/src/CSS/Accomplishment.css
@@ -37,11 +37,13 @@
   background-color: white;
   min-width: 250px;
   min-height: 250px;
+  max-width: 50%;
   border-radius: 10px;
   box-shadow: #d9d9d9 5px 5px;
   margin: 5px 50px 20px 50px;
 }
 
 .card:hover {
-  background-color: #d9d9d9;
+  border-color: #d9d9d9;
+  border-width: 3px;
 }
